# lab-dragon

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example-users.txt  example.env  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
dragon-core/: Dockerfile  README.md  config_example.toml  environment.yml  pyproject.toml  requirements.txt  setup.py
dragon-core/dragon_core/: config.py  entry_points.py  utils.py
dragon-core/dragon_core/api/: API_specification.yaml  converters.py  entities.py  starting_app.py
dragon-core/dragon_core/components/: table.py
dragon-core/dragon_core/generators/: display.py  jupyterbook.py  meta.py
dragon-core/dragon_core/modules/: __init__.py  bucket.py  dragon_lair.py  entity.py  instance.py  library.py  notebook.py  project.py  step.py  task.py
dragon-core/dragon_core/scripts/: env_creator.py  new_env_creator.py
dragon-core/schemas/: project.toml  step.toml  task.toml
dragon-core/templates/: md_entity.jinja
dragon-core/test/deprectaed_tests/: test_book_generator.py  test_data_link_filtering.py
dragon-core/test/pytest/: conftest.py  test_API.py  test_comments.py  test_data_link_filtering.py  test_display_generator.py  test_list.md  test_meta_generator.py
dragon-core/test/testing_templates/: jupyter_notebook.jinja
dragon-core/test/tmp/: 0a3752c1_Demo Notebook.toml  25a4aceb_T1 Measurement.toml  4b359755_First resonator measurement.toml  54452c42_T2 Ramsey Measurement.toml  67b378c0_Finding Resonator Frequency.toml  701637eb_Calibrating Power Rabi.toml  (+4 more)
(+201 files in other folders)
