[project]
name="qdata"
version="0.0.1"
dependencies = [
    "pytest",
    "connexion[flask,swaggwer-ui]",
    "numpy",
    "qdata",
    "jinja2",
    "labcore@git+https://github.com/toolsforexperiments/labcore.git",
    "nbformat",
    "markdown",
    "imagehash",
    "pillow",
    "nbconvert",
    "werkzeug",
    "flask",
    "markdownify",
    "tomlkit",
    "param",
    "setuptools",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]